# geoid-toolkit

./: .gitignore  CITATION.cff  CONTRIBUTORS.md  Calculate Geoidal Undulation.ipynb  MANIFEST.in  README.md  README.rst  environment.yml  postBuild  pyproject.toml  requirements.txt  setup.py
.binder/: environment.yml
.github/workflows/: python-publish.yml  python-request.yml  sphinx-build.yml
doc/: environment.yml
doc/source/: conf.py  index.rst
doc/source/_assets/: geoid-refs.bib
doc/source/_static/: style.css
doc/source/api_reference/: API-Reference.rst  calculate_geoid_undulation.rst  calculate_tidal_offset.rst  compute_geoid_grids.rst  compute_geoidal_undulation.rst  corrected_geoid_undulation.rst  gauss_weights.rst  geoid_undulation.rst  gravity_anomaly.rst  gravity_disturbance.rst  height_anomaly.rst  interpolate.rst  legendre_polynomials.rst  norm_gravity.rst  norm_potential.rst  read_EGM2008_geoid_grids.rst  read_ICGEM_geoid_grids.rst  read_ICGEM_harmonics.rst  read_topography_harmonics.rst  real_potential.rst  ref_ellipsoid.rst  spatial.rst  topographic_potential.rst  utilities.rst
doc/source/getting_started/: Citations.md  Citations.rst  Contributing.rst  Examples.rst  Install.ipynb  Install.md  Install.rst  Resources.md  Resources.rst
doc/source/notebooks/: Calculate-Geoidal-Undulation.ipynb
doc/source/project/: Citations.rst  Licenses.rst  Testing.rst
doc/source/release_notes/: release-v1.1.0.0.rst  release-v1.1.0.1.rst  release-v1.1.1.rst  release-v1.1.2.rst  release-v1.1.3.rst
doc/source/user_guide/: Examples.rst  calculate_geoid_undulation.md  calculate_geoid_undulation.rst  calculate_tidal_offset.md  calculate_tidal_offset.rst  compute_geoid_grids.rst  compute_geoidal_undulation.rst  corrected_geoid_undulation.rst  gauss_weights.md  gauss_weights.rst  geoid_undulation.md  geoid_undulation.rst  gravity_anomaly.md  gravity_anomaly.rst  gravity_disturbance.md  gravity_disturbance.rst  height_anomaly.md  height_anomaly.rst  legendre_polynomials.md  legendre_polynomials.rst  norm_gravity.md  norm_gravity.rst  norm_potential.md  norm_potential.rst  read_ICGEM_geoid_grids.md  read_ICGEM_geoid_grids.rst  read_ICGEM_harmonics.md  read_ICGEM_harmonics.rst  read_gravity_model.md  read_topography_harmonics.rst  real_potential.md  real_potential.rst  ref_ellipsoid.md  ref_ellipsoid.rst  spatial.rst  topographic_potential.rst  utilities.rst
geoid_toolkit/: __init__.py  calculate_geoid_undulation.py  calculate_tidal_offset.py  corrected_geoid_undulation.py  gauss_weights.py  geoid_undulation.py  gravity_anomaly.py  gravity_disturbance.py  height_anomaly.py  interpolate.py  legendre_polynomials.py  norm_gravity.py  norm_potential.py  read_ICGEM_harmonics.py  read_gravity_model.py  read_topography_harmonics.py  real_potential.py  ref_ellipsoid.py  spatial.py  topographic_potential.py  utilities.py  version.py
notebooks/: Calculate-Geoidal-Undulation.ipynb
scripts/: compute_geoid_grids.py  compute_geoidal_undulation.py  read_EGM2008_geoid_grids.py  read_ICGEM_geoid_grids.py
test/: test_interpolate.py
